# Vertex

./: .gitignore  CMakeLists.txt  README.md  build.bat
.github/workflows/: ci.yml  release.yml
installer/windows/: vertex.nsi.in
src/: main.cpp
src/codec/: crc32.cpp  crc32.h  image.h  inflate.cpp  inflate.h  jpeg.cpp  jpeg.h  png.cpp  png.h  sha256.cpp  sha256.h  webp.cpp  webp.h
src/css/: style.h  stylesheet.cpp  stylesheet.h
src/font/: font_face.cpp  font_face.h  truetype.cpp  truetype.h
src/html/: dom.h  parser.cpp  resources.cpp  tokenizer.cpp
src/js/: ast.h  canvas_bridge.cpp  canvas_bridge.h  canvas_surface.h  compiler.cpp  compiler.h  dom_bridge.cpp  dom_bridge.h  engine.cpp  engine.h  gc.cpp  gc.h  lexer.cpp  lexer.h  parser.cpp  parser.h  runtime.cpp  runtime.h  value.h  vm.cpp  vm.h
src/layout/: box.h  layout_engine.cpp  layout_engine.h
src/network/: arti_client.cpp  arti_client.h  cookies.h  fetcher.cpp  fetcher.h  http_client.cpp  http_client.h  resource_cache.cpp  resource_cache.h  socket.cpp  socket.h  text_decode.cpp  text_decode.h  tls_linux.cpp  tls_macos.cpp  tls_socket.h  tls_windows.cpp  url.cpp  url.h  websocket.cpp  websocket.h
src/platform/: box_painter.h  browser_core.h  chrome.h  chrome_theme.h  downloads.cpp  downloads.h  form_state.h  linux_font_registry.h  main_linux.cpp  main_macos.mm  media_linux.cpp  media_macos.mm  media_player.h  media_win32.cpp  media_win32.h  plat_text_measure.h  platform.h  platform_features.h  platform_linux.cpp  platform_win32.cpp  profile.cpp  profile.h  resource.h  updater.h  updater_helper.cpp  version.h  vertex.rc  vertex_icon.icns  vertex_icon_light.icns
src/render/: animation.h  box_paint.cpp  canvas_cairo.cpp  canvas_cairo.h  canvas_coregraphics.cpp  canvas_coregraphics.h  canvas_raster.cpp  canvas_raster.h  canvas_renderer.cpp  canvas_renderer.h  raster_bitmap.h  rasterizer.cpp  rasterizer.h  renderer.cpp  renderer.h  svg.h  transition.h  webfont.h
src/test/: codec_tests.cpp  css_tests.cpp  dbg_prog.cpp  fixture.h  html_tests.cpp  js_tests.cpp  layout_engine_tests.cpp  main.cpp  network_tests.cpp  paint_tests.cpp
tests/: codec_tests.cpp  css_tests.cpp  dbg_prog.cpp  fixture.cpp  fixture.h  html_tests.cpp  js_tests.cpp  layout_engine_main.cpp  layout_engine_tests.cpp  layout_tests.cpp  main.cpp  network_tests.cpp  paint_tests.cpp
tests/fixtures/css/cascade/: adjacent-sibling.expected.txt  adjacent-sibling.in.css  adjacent-sibling.in.html  attribute-selectors.expected.txt  attribute-selectors.in.css  attribute-selectors.in.html  pseudo-classes.expected.txt  pseudo-classes.in.css  pseudo-classes.in.html
tests/fixtures/css/rules/: basic.expected.txt
tests/fixtures/html/dom/: rawtext-script-multiline.expected.txt  rawtext-script-multiline.in.html
tests/fixtures/html/tokenizer/: doctype-comment-entity.in.html
tests/fixtures/render_probe/: stacking.expected.txt  stacking.in.html
tests/fuzz/: fuzz_css_stylesheet.cpp  fuzz_html_tokenizer.cpp  fuzz_js_lexer.cpp  fuzz_url.cpp
tools/: check_title.cpp  debug_title.cpp  dump_layout.cpp  render_probe.cpp  run_probe.bat  site_probe.cpp  site_probe_results.txt  snapshot_svg.cpp  test_url.cpp
